---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type t_p : procedure(a, b : int, var c : string)\nprocedure p(a, b : int, var c : string) end p\n\nvar _ : t_p := p\n"
---
"t_p"@"src/main.t:5..8" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"a"@"src/main.t:21..22" [Param(Value, No)]: <error>
"b"@"src/main.t:24..25" [Param(Value, No)]: <error>
"c"@"src/main.t:37..38" [Param(Reference(Var), No)]: <error>
"p"@"src/main.t:59..60" [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"a"@"src/main.t:61..62" [Param(Value, No)]: int
"b"@"src/main.t:64..65" [Param(Value, No)]: int
"c"@"src/main.t:77..78" [Param(Reference(Var), No)]: string
"_"@"src/main.t:100..101" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
